# tabcure

./: .gitignore  .pre-commit-config.yaml  DEADJOE  README.md  env-1.yaml  env.yaml  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test_suite.yml
conf/: default.yaml
conf/nn/: default.yaml
docs/: index.md
experiments/LLMs/: pipline_LLM.py  run_LLM.bash
experiments/LLMs-legacy/: pipline_LLM.py  run_LLM.bash
experiments/LLMs-legacy/configs/: adult.yaml  heloc.yaml
experiments/LLMs/configs/: adult.yaml  heloc.yaml  travel.yaml
src/tabcure/: __init__.py  run.py
src/tabcure/be_great/: great.py  great_dataset.py  great_trainer.py  great_utils.py
src/tabcure/modules/: __init__.py  tabcure.py  tabcure_dataset.py  tabcure_start.py  tabcure_trainer.py  tabcure_utils.py  utils.py
src/tabcure/pl_modules/: pl_module.py
src/tabcure/tabular_metrices/: README.md  __init__.py  base.py  bayesian_network.py  gaussian_mixture.py  multi_column_pairs.py  multi_single_column.py  new_row_synthesis.py
src/tabcure/tabular_metrices/detection/: __init__.py  base.py  sklearn.py
src/tabcure/tabular_metrices/efficacy/: __init__.py  base.py  binary.py  mlefficacy.py  multiclass.py  regression.py
src/tabcure/tabular_metrices/privacy/: __init__.py  base.py  cap.py  categorical_sklearn.py  ensemble.py  loss.py  numerical_sklearn.py  radius_nearest_neighbor.py  util.py
src/tabcure/ui/: run.py
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py
